# ClientServerApplication

./: README.md
ClientServerProject/: CMakeLists.txt
ClientServerProject/chat_project/: client.c  server.c  test.c
